--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,5 +1,61 @@
 {% extends "shop/base_template.html" %}
 
 {% block content %}
-<h1>OK</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src=".../100px180/" alt="Product photo">
+            <div class="card-body">
+                <h5 class="card-title">Product Name</h5>
+                <p class="card-text">Product desctiption</p>
+                <a href="#" class="btn btn-primary">Add to card</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4 offset-md-4">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src=".../100px180/" alt="Product photo">
+            <div class="card-body">
+                <h5 class="card-title">Product Name</h5>
+                <p class="card-text">Product desctiption</p>
+                <a href="#" class="btn btn-primary">Add to card</a>
+            </div>
+        </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src=".../100px180/" alt="Product photo">
+            <div class="card-body">
+                <h5 class="card-title">Product Name</h5>
+                <p class="card-text">Product desctiption</p>
+                <a href="#" class="btn btn-primary">Add to card</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src=".../100px180/" alt="Product photo">
+            <div class="card-body">
+                <h5 class="card-title">Product Name</h5>
+                <p class="card-text">Product desctiption</p>
+                <a href="#" class="btn btn-primary">Add to card</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src=".../100px180/" alt="Product photo">
+            <div class="card-body">
+                <h5 class="card-title">Product Name</h5>
+                <p class="card-text">Product desctiption</p>
+                <a href="#" class="btn btn-primary">Add to card</a>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
+
 {% endblock content %}
