--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,59 +1,37 @@
 {% extends "shop/base_template.html" %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src=".../100px180/" alt="Product photo">
-            <div class="card-body">
-                <h5 class="card-title">Product Name</h5>
-                <p class="card-text">Product desctiption</p>
-                <a href="#" class="btn btn-primary">Add to card</a>
-            </div>
+<div>
+  <div class="product__container">
+    <div class="product__card">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src=".../100px180/" alt="Product photo">
+        <div class="card-body">
+          <h5 class="card-title">Product Name</h5>
+          <p class="card-text">Product desctiption</p>
+          <a href="#" class="btn btn-primary">Add to card</a>
         </div>
+      </div>
     </div>
-    <div class="col-md-4 offset-md-4">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src=".../100px180/" alt="Product photo">
-            <div class="card-body">
-                <h5 class="card-title">Product Name</h5>
-                <p class="card-text">Product desctiption</p>
-                <a href="#" class="btn btn-primary">Add to card</a>
-            </div>
+    <div class="product__card">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src=".../100px180/" alt="Product photo">
+        <div class="card-body">
+          <h5 class="card-title">Product Name</h5>
+          <p class="card-text">Product desctiption</p>
+          <a href="#" class="btn btn-primary">Add to card</a>
         </div>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src=".../100px180/" alt="Product photo">
-            <div class="card-body">
-                <h5 class="card-title">Product Name</h5>
-                <p class="card-text">Product desctiption</p>
-                <a href="#" class="btn btn-primary">Add to card</a>
-            </div>
+    <div class="product__card">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src=".../100px180/" alt="Product photo">
+        <div class="card-body">
+          <h5 class="card-title">Product Name</h5>
+          <p class="card-text">Product desctiption</p>
+          <a href="#" class="btn btn-primary">Add to card</a>
         </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src=".../100px180/" alt="Product photo">
-            <div class="card-body">
-                <h5 class="card-title">Product Name</h5>
-                <p class="card-text">Product desctiption</p>
-                <a href="#" class="btn btn-primary">Add to card</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src=".../100px180/" alt="Product photo">
-            <div class="card-body">
-                <h5 class="card-title">Product Name</h5>
-                <p class="card-text">Product desctiption</p>
-                <a href="#" class="btn btn-primary">Add to card</a>
-            </div>
-        </div>
+      </div>
     </div>
   </div>
 </div>
