--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,6 +1,9 @@
 {% extends "shop/base_template.html" %}
 
 {% block content %}
+{% for item in goods %}
+	<h1>{{item.name}}</h1>
+{% endfor %}
 <div class="container">
   <div class="row">
     <div class="col-md-4">
