--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -10,11 +10,12 @@
           <div class="product__card__title">
             <h5 class="card-title">{{item.name}}</h5>
             <p class="card-text">{{item.description}}</p>
-            <a href="#" class="btn btn-outline-secondary btn-sm">Show details</a>
-
+            <form action="/detail/{{item.id}}" method='GET'>
+              <button class="btn btn-outline-secondary btn-sm" type='submit'>Show details</button>
+            </form>
             <div class="product__card__add">
              <p>${{item.price}}</p>
-              <form action='actionUrl' method='GET'>
+              <form action="/add_to_cart/{{item.id}}" method='GET'>
                 <button class="btn btn-primary" type='submit'>Add to card</button>
               </form>
             </div>
