--- a/shop/templates/shop/base_template.html
+++ b/shop/templates/shop/base_template.html
@@ -24,7 +24,9 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>Shop WSINF</h3>
+                <h3>
+                    <a href="/index">Shop WSINF</a>
+                </h3>
             </div>
 
             <ul class="list-unstyled components">
