--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -15,7 +15,7 @@
             </form>
             <div class="product__card__add">
              <p>${{item.price}}</p>
-              <form action="/add_to_cart/{{item.id}}" method='GET'>
+              <form action="/add_to_cart/{{item.id}}" method='POST'>
                 <button class="btn btn-primary" type='submit'>Add to card</button>
               </form>
             </div>
