--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,12 +1,12 @@
 {% extends "shop/base_template.html" %}
-
+{% load static %}
 {% block content %}
 <div>
   <div class="product__container">
     {% for item in goods %}
       <div class="product__card">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src={{item.img}} alt="Product photo">
+          <img class="card-img-top" src="{% static 'shop/img/' %}{{ item.img }}" alt="Product photo">
           <div class="product__card__title">
             <h5 class="card-title">{{item.name}}</h5>
             <p class="card-text">{{item.description}}</p>
