Fixed description layout

--- a/shop/templates/shop/detail.html
+++ b/shop/templates/shop/detail.html
@@ -1,5 +1,18 @@
 {% extends "shop/base_template.html" %}
 
 {% block content %}
-<h1>{{ product_name }}</h1>
+<div>
+    <h1>{{ product_name }}</h1>
+    <img class="card-img-top" src="/static/shop/img/{{ img_url }}" alt="Product photo">
+    <div class="product__card__title">
+    <h5 class="card-title">{{product_name}}</h5>
+    <p class="productCard__description">{{product_description}}</p>
+    <div class="product__card__add">
+        <p>${{price}}</p>
+        <form action="/add_to_cart/{{item.id}}" method='POST'>
+        <button class="btn btn-primary" type='submit'>Add to card</button>
+        </form>
+    </div>
+</div>
+
 {% endblock content %}
