--- a/shop/static/shop/style.css
+++ b/shop/static/shop/style.css
@@ -186,6 +186,11 @@ a.article:hover {
     align-items: start;
 
 }
+.productCard__description {
+    overflow-y: scroll;
+    width: 100%;
+    height: 200px;
+}
 .product__card__add {
     /* margin: 10px; */
 }
