--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -9,7 +9,7 @@
           <img class="card-img-top" src="{% static 'shop/img/' %}{{ item.img }}" alt="Product photo">
           <div class="product__card__title">
             <h5 class="card-title">{{item.name}}</h5>
-            <p class="card-text">{{item.description}}</p>
+            <p class="productCard__description">{{item.description}}</p>
             <form action="/detail/{{item.id}}" method='GET'>
               <button class="btn btn-outline-secondary btn-sm" type='submit'>Show details</button>
             </form>
