--- a/shop/templates/shop/base_template.html
+++ b/shop/templates/shop/base_template.html
@@ -45,7 +45,7 @@
                     <a href="#">Cart</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="/about/">About</a>
                 </li>
         
                 <li>
