--- a/shop/templates/shop/base_template.html
+++ b/shop/templates/shop/base_template.html
@@ -49,7 +49,7 @@
                 </li>
         
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="/contact/">Contact</a>
                 </li>
             </ul>
         </nav>
