--- a/shop/templates/shop/base_template.html
+++ b/shop/templates/shop/base_template.html
@@ -5,8 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title></title>
+    {% if title %}
+        <title>{{ title }}</title>
+    {% else %}
+        <title>Shop</title>
+    {% endif %}
+    
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -42,7 +46,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Cart</a>
+                    <a href="/cart/">Cart</a>
                 </li>
                 <li>
                     <a href="/about/">About</a>
@@ -67,7 +71,7 @@
                    
                         <div style="display: inline">
                             <h4>cart is empty</h4>
-                            <form action="#" method="GET" class="btn">
+                            <form action="/cart/" method="GET" class="btn">
                                 <input type="submit" name="Cart" value="Cart"> 
                             </form>
                         </div>
