I am lazy to discribe it

--- a/shop/static/shop/style.css
+++ b/shop/static/shop/style.css
@@ -197,3 +197,9 @@ a.article:hover {
 .product__card__add p {
     margin: 0;
 }
+
+.cart_item
+{
+    background-color: yellow;
+    display: inline;
+}
