--- a/shop/templates/shop/detail.html
+++ b/shop/templates/shop/detail.html
@@ -14,8 +14,9 @@
     </div>
     <div class="product__card__add">
         <p>${{product.price}}</p>
-        <form action="/add_to_cart/{{item.id}}/" method='POST'>
-        <button class="btn btn-primary" type='submit'>Add to card</button>
+        <form action="/add_to_cart/{{product.id}}/" method='POST'>
+            {% csrf_token %}
+            <button class="btn btn-primary" type='submit'>Add to card</button>
         </form>
     </div>
 </div>
