--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -16,6 +16,7 @@
 	</div>
 {% endfor %}
 
+{% if products %}
 <div>
 	<p>Summa:{{ summa }}</p>
 	<form action="/order/" method='POST'>
@@ -23,4 +24,7 @@
         <button class="btn btn-primary" type='submit'>Order</button>
     </form>
 </div>
+{% else %}
+<h1>You cart is empty!</h1>
+{% endif %}
 {% endblock content %}
