--- a/shop/static/shop/style.css
+++ b/shop/static/shop/style.css
@@ -171,11 +171,21 @@ a.article:hover {
 .product__container {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     flex-wrap: wrap;
 }
+
+.product__image {
+    height: 300px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: contain;
+}
+
 .product__card {
-    margin-bottom: 24px;
+    margin: 5px;
+
 }
 .product__card__title {
     display: flex;
