--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -7,23 +7,28 @@
       <h1>{{category}}</h1>
       <br>
     {% endif %}
-    {% for item in goods %}
+    {% for item in products %}
       <div class="product__card">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="{% static 'shop/img/' %}{{ item.img }}" alt="Product photo">
+          <img class="card-img-top" src="{% static 'shop/img/' %}{{ item.product.img }}" alt="Product photo">
           <div class="product__card__title">
-            <h5 class="card-title">{{item.name}}</h5>
-            <p class="productCard__description">{{item.description}}</p>
-            <form action="/detail/{{item.id}}" method='GET'>
+            <h5 class="card-title">{{item.product.name}}</h5>
+            <p class="productCard__description">{{item.product.description}}</p>
+            <form action="/detail/{{item.product.id}}" method='GET'>
               <button class="btn btn-outline-secondary btn-sm" type='submit'>Show details</button>
             </form>
             <div class="product__card__add">
-             <p>${{item.price}}</p>
-              <form action="/add_to_cart/{{item.id}}/" method='POST'>
+             <p>${{item.product.price}}</p>
+              <form action="/add_to_cart/{{item.product.id}}/" method='POST'>
                 {% csrf_token %}
                 <button class="btn btn-primary" type='submit'>Add to card</button>
               </form>
             </div>
+            {% if item.is_in_cart %}
+              <div>
+                <p>You have already {{ item.count }}</p>
+              </div>
+            {% endif %}
           </div>
         </div>
       </div>
