--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -10,8 +10,7 @@
     {% for item in products %}
       <div class="product__card">
         <div class="card" style="width: 18rem;">
-          {% comment %} <img class="card-img-top" src="{% static 'shop/img/' %}{{ item.img }}" alt="Product photo"> {% endcomment %}
-          <div class="product__image" style="background-image: url({% static 'shop/img/' %}{{ item.img }})" ></div>
+          <div class="product__image" style="background-image: url({% static 'shop/img/' %}{{ item.product.img }})" ></div>
           <div class="product__card__title">
             <h5 class="card-title">{{item.product.name}}</h5>
             <p class="productCard__description">{{item.product.description}}</p>
