--- a/shop/templates/shop/about.html
+++ b/shop/templates/shop/about.html
@@ -1,4 +1,13 @@
 {% extends "shop/base_template.html" %}
 {% block content %}
+
+<div class="contact">
 <h1>About</h1>
+<p>The University of Computer Science and Skills (WSIU) is one of the largest IT institutions in the region of Łódź, Kujawsko-Pomorskie and Wielkopolskie. Since 1997 The University of Computer Science and Skills has educated thousands of students in Łódź as well as in its branches in Bydgoszcz, Włocławek and Opatówek. WSIU employs highly qualified professors and academics from the Technical University of Łódź, University of Łódź and University of Technology and Life Sciences in Bydgoszcz.
+</p>
+<p>Lectures and practical, specialized classes and laboratories are conducted in five lecture rooms (400 and 250 seats each) and well-equipped didactic rooms. Currently the total amount of the state-of-the-art computers used in the educational process and other extra-mural activities (Internet café) exceeds 1400 machines. Each student has free access to all the web-based resources including e-mail accounts, FTP servers, website design and publishing.
+</p>
+<p>The University of Computer Science and Skills has also got its own students’ hall of residence offering students high quality accommodation in comfortably furnished double rooms with bathrooms, cable TV and free broadband Internet access. What is more, at the WSIU Campus one can find a modern sports centre with a swimming pool equipped with water slides, Jacuzzi, artificial rivers and sauna, as well as a fitness room, a gym, a sports hall and an underground parking space.
+</p>
+</div>
 {% endblock content %}
