--- a/shop/templates/shop/base_template.html
+++ b/shop/templates/shop/base_template.html
@@ -29,7 +29,9 @@
         <nav id="sidebar">
             <div class="sidebar-header">
                 <h3>
-                    <a href="/index">Shop WSINF</a>
+                    <a href="/index">
+                        <span class="logo-icon" ></span>
+                    </a>
                 </h3>
             </div>
 
