--- a/shop/templates/shop/contacts.html
+++ b/shop/templates/shop/contacts.html
@@ -1,4 +1,12 @@
 {% extends "shop/base_template.html" %}
 {% block content %}
+<div class="contact">
 <h1>Contact</h1>
+<p>The University of Computer Science and Skills</p>
+<p>Rzgowska Street 17a</p>
+<p>93-008 Łódź</p>
+<p></p>
+<p>phone: +48 42 275 01 00 or +48 42 275 01 01</p>
+<p>fax: +48 42 640 33 55</p>
+</div>
 {% endblock content %}
