--- a/shop/static/shop/style.css
+++ b/shop/static/shop/style.css
@@ -72,7 +72,7 @@ a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #fff;
+    background: #cd2e3b;
     color: #cd2e3b;
 }
 
