--- a/shop/templates/shop/base_template.html
+++ b/shop/templates/shop/base_template.html
@@ -60,6 +60,7 @@
         </nav>
 
         <!-- Page Content  -->
+
         <div id="content">
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -83,6 +84,12 @@
                         </div>
                     </div>
             </nav>
+            <div class="form-group" >
+                <form action="/index/" method="GET">
+                    <input type="text" class="form-control" id="key_words" name="key_words" aria-describedby="emailHelp" placeholder="What you need?">
+                    <button class="btn btn-info" style="margin-top: 5px" type="submit">Search</button>
+                </form>
+            </div>
            {% block content %}
         {% endblock content %}   
         </div>
